<resources>
    <string name="app_name">Paladict 2</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer closed</string>
    <string name="players_menu_title">Players</string>
    <string name="champions_menu_item">Champions</string>
    <string name="items_menu_title">Items</string>
    <string name="news_menu_title">News</string>
    <string name="close_text">Close</string>
    <string name="learn_more_text">Learn More</string>
    <string name="transition_fab">fab activity transition</string>
    <string name="transition_bottom_bar">activity_transition_bottom_bar</string>
    <string name="transition_circular_layout">activity circular layout transition</string>
    <string name="champion_image_transition">activity champion image transition</string>
    <string name="champion_name_transition">activity champion name transition</string>
    <string name="champion_class_transition">activity champion class transition</string>
    <string name="champion_det_frag_name">Champion Details</string>
    <string name="transition_name_string">transitionName</string>
    <string name="champion_image_trans_string">championImage</string>
    <string name="champion_trans_item">champion transition item</string>
    <string name="selected_champion_object">selectedChampion</string>
    <string name="health_detail_title">HEALTH</string>
    <string name="speed_detail_title">SPEED</string>
    <string name="rotation_detail_title">ROTATION</string>
    <string name="abilities_title_text">ABILITIES</string>
    <string name="lore_title_text">LORE</string>
    <string name="log_in">LOG IN</string>
    <string name="home_screen_subtitle">In order to view your personal dahsboard.</string>
    <string name="ps4">PS4</string>
    <string name="xbox">XBOX</string>
    <string name="nintendo_switch">Switch</string>
    <string name="pc">PC</string>
    <string name="please_select_platform">Please Select a Platform!</string>
    <string name="please_select_your_account">Please select your account.</string>
    <string name="ok">OK</string>
    <string name="select">SELECT</string>
    <string name="stats_title">STATS</string>
    <string name="friends_title">FRIENDS</string>
    <string name="matches_title">MATCHES</string>
    <string name="logout_title">Log Out</string>
    <string name="roles_played_title">Roles Played</string>
    <string name="your_role_distribution">Your Role Distribution</string>
    <string name="center_text_role_string"> %1$d\nUnique\n%2$s\nMatches</string>
    <string name="wins">WINS</string>
    <string name="losses">LOSSES</string>
    <string name="no_chart_data">No recent match data found.</string>
    <string name="hundred_ranked_text">/100</string>
    <string name="level">LEVEL</string>
    <string name="platform">PLATFORM</string>
    <string name="mastery">MASTERY</string>
    <string name="win_loss_chart">WIN/LOSS CHART</string>
    <string name="champion_db_updated">Updating Champion Database</string>
    <string name="item_db_updated">Updating Item Database</string>
    <string name="price">PRICE: %1$s</string>
</resources>
