<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_entry"
        android:text="@string/log_in"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:fontFamily="sans-serif-thin"
        android:textSize="@dimen/textSizexLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/subtitle_view"
        app:layout_constraintTop_toBottomOf="@id/login_entry"
        android:layout_margin="@dimen/margin_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text="@string/home_screen_subtitle"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
        app:layout_constraintTop_toBottomOf="@id/subtitle_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:singleSelection="true"
        android:layout_marginTop="@dimen/margin_large"
        android:id="@+id/toggle_button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ps4"/>
        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xbox"/>
        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nintendo_switch"/>
        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pc"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

           <com.google.android.material.textfield.TextInputEditText
        android:layout_margin="@dimen/margin_large"
        android:id="@+id/user_name_input"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle_view"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>