<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="matchHistoryViewModel"
            type="com.example.paladict2.viewmodel.MatchHistoryViewModel" />

        <variable
            name="selectedPLayerViewModel"
            type="com.example.paladict2.viewmodel.PlayerViewModel" />
    </data>

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/role_dist_card"
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="@dimen/margin_small"
                app:cardUseCompatPadding="true"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/role_chart_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-thin"
                        android:text="@string/your_role_distribution"
                        android:textSize="@dimen/textSizexLarge"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/user_class_chart"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/margin_medium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/role_chart_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@id/role_dist_card">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_small"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardUseCompatPadding="true">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/win_card_title"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_marginTop="@dimen/margin_small"
                            android:fontFamily="sans-serif-thin"
                            android:text="@string/wins"
                            android:textSize="@dimen/textSizeLarge"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/win_card_win_count"
                            style="@style/Widget.MaterialComponents.CardView"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_marginTop="@dimen/margin_small"
                            android:fontFamily="sans-serif-thin"
                            android:text="@{selectedPLayerViewModel.player.wins}"
                            android:textSize="@dimen/textSizeLarge"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/win_card_title"
                            tools:text="100" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    style="@style/Widget.MaterialComponents.CardView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_small"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/colorAccentInverse"
                    app:cardUseCompatPadding="true">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/loss_card_title"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_marginTop="@dimen/margin_small"
                            android:fontFamily="sans-serif-thin"
                            android:text="@string/losses"
                            android:textSize="@dimen/textSizeLarge"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/losses_card_loss_count"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_marginTop="@dimen/margin_small"
                            android:fontFamily="sans-serif-thin"
                            android:text="@{selectedPLayerViewModel.player.losses}"
                            android:textSize="@dimen/textSizeLarge"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/loss_card_title"
                            tools:text="250" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>